# DGP_Protocol

./: .gitignore  AGENTS.md  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  README.org  pyproject.toml
.github/workflows/: ci.yml  publish.yml
dgp_protocol/: composition.py  empirical.py  exceptions.py  marginal.py  parametric.py  sample_distribution.py  sampling.py
examples/: __init__.py  coin_plus_noise.py  empirical_bootstrap.py  fair_coin.py  hierarchical.py  twfe.py
src/dgp_protocol/: __init__.py  _mc.py  composition.py  distribution.py  empirical.py  parametric.py  protocol.py  sample_distribution.py  sampling.py  warnings.py
tests/: test_composition.py  test_composition_moment_covariance.py  test_distribution.py  test_empirical.py  test_marginal.py  test_moment_covariance_estimator.py  test_moment_covariance_estimator_jax.py  test_parametric.py  test_pickle.py  test_protocol.py  test_sample_distribution.py
